# luminode-sync

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md
apps/beatmap-cli/: Cargo.toml
apps/beatmap-cli/src/: main.rs
apps/beatmap-service/: Dockerfile  entrypoint.sh  jobs.py  main.py  requirements.txt  spotify.py  worker.py
apps/lightd/: Cargo.toml
apps/lightd/src/: config.rs  daemon.rs  main.rs
beatmaps/: index.json
config/: lightd.toml
config/plans/: default.toml
crates/beatmap_core/: Cargo.toml
crates/beatmap_core/src/: beatmap.rs  lib.rs  library.rs  timing.rs
crates/beatmap_gen/: Cargo.toml
crates/beatmap_gen/src/: analysis.rs  color.rs  decode.rs  lib.rs  library.rs  ml_beats.rs  sections.rs
crates/light_engine/: Cargo.toml
crates/light_engine/src/: color.rs  effects.rs  lib.rs  plan.rs  scheduler.rs
crates/pi_output/: Cargo.toml
crates/pi_output/src/: lib.rs
crates/runtime_sync/: Cargo.toml
crates/runtime_sync/src/: clock.rs  deezer.rs  lib.rs  spotify.rs
deploy/: deploy.sh  leds-sync.service
docs/: architecture.md  sample.beatmap.json
scripts/: beat_tracker.py  seed_beatmaps.py
viewer/: package.json
viewer/app/: globals.css  layout.tsx  page.tsx
viewer/app/api/albumart/: route.ts
viewer/app/api/audio/: route.ts
viewer/app/api/beatmap/: route.ts
viewer/app/api/luminode/batch/[id]/: route.ts
viewer/app/api/luminode/job/[id]/cancel/: route.ts
viewer/app/api/luminode/submit/: route.ts
viewer/app/api/luminode/tracks/: route.ts
viewer/app/api/tracks/: route.ts
viewer/components/: BatchJobs.tsx  BeatmapPlayer.tsx  LedStrip.tsx  TrackList.tsx
viewer/lib/: engine.ts  types.ts
