[workspace]
members = [
    "crates/beatmap_core",
    "crates/beatmap_gen",
    "crates/runtime_sync",
    "crates/light_engine",
    "crates/pi_output",
    "apps/beatmap-cli",
    "apps/lightd",
]
resolver = "2"

[workspace.dependencies]
# Shared version pins to keep the dependency graph consistent
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
rmp-serde   = "1"
anyhow      = "1"
thiserror   = "1"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap        = { version = "4", features = ["derive", "env"] }
toml        = "0.8"
reqwest     = { version = "0.11", features = ["json"] }
sha2        = "0.10"
hex         = "0.4"

[profile.release]
# Optimise hard for Pi — fat LTO, no debug symbols
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
