[package]
name    = "beatmap-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "beatmap-cli"
path = "src/main.rs"

[dependencies]
beatmap_core = { path = "../../crates/beatmap_core" }
beatmap_gen  = { path = "../../crates/beatmap_gen" }
runtime_sync = { path = "../../crates/runtime_sync" }
clap         = { workspace = true }
anyhow       = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }
